--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,12 @@
-<h1>
+<p>
   {{title}}
-</h1>
+</p>
+<p>
+  {{title}}
+</p>
+
+<ul>
+  <li *ngFor="let elem of lista">
+    {{elem}}
+  </li>
+</ul>
